# SLAE

./: .gitignore  CMakeLists.txt  README.md
KR1/3/: 3.cpp  CMakeLists.txt  fpi_3.txt  plot.py
KR1/4/: 4.cpp  fpi.txt  gaus.txt  jacobi.txt  plot.py
KR2/task1/: des_1  des_2  des_3  des_4  methods_comparator.py  speed  t(lam).py  task1.cpp
KR2/task2/: coord.py  coord2.py  points_1  points_2  points_3  points_4  points_5  task2.cpp
Tridiagonal_matrix/: CMakeLists.txt  TridiagonalMatrix.h  TridiagonalMatrix_solver.h  tests_tridiagonal.cpp
src/Decompositions/: CMakeLists.txt  Householder.h
src/Matrix/: CMakeLists.txt  Dense.h  Sparce.h  TridiagonalMatrix.h  Vector.h
src/Solvers/: CMakeLists.txt  Chebyshev.h  Conjugate_Gradient.h  FPI.h  GMRES.h  Gaus_Zeidel.h  Gaus_back.h  Gradient_Descent.h  Jacobi.h  SOR.h  SOR_SSOR.h  TridiagonalMatrix_solver.h
src/Utility/: CMakeLists.txt  Gradient_Descent.h
tests/: CMakeLists.txt  Matrix_generator.py  test_GMRES.cpp  test_itterations.cpp  tests_CSR.cpp  tests_Householder.cpp  tests_dense.cpp  tests_tridiagonal.cpp
tests/txt_files/: 20.txt  CMakeLists.txt  Matrix_gen.h  b_100.txt  b_1000.txt  b_20.txt  b_5.txt  mat_20.txt  mat_3.txt  mat_5.txt  mat_diag_pos_100.txt  mat_diag_pos_20.txt  mat_diag_pos_5.txt
